# gcs-rsync

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yml  gsutil.pcap
.cargo/: config  config.toml
.github/workflows/: build.yml  publish.yml  push.yml  rust.yml
examples/: bucket_to_bucket_sync.rs  bucket_to_folder_mirror.rs  bucket_to_folder_sync.rs  delete_object.rs  download_object.rs  download_public_object.rs  fs_create.rs  fs_mtime.rs  gcs-rsync-meta.rs  gcs-rsync.rs  globs.rs  list_objects.rs  list_objects_service_account.rs  rsync.rs  upload_object.rs
src/: lib.rs
src/gcp/: mod.rs
src/gcp/oauth2/: README.md  mod.rs  token.rs
src/gcp/storage/: client.rs  mod.rs  object.rs
src/gcp/storage/resources/: mod.rs  object.rs
src/gcp/sync/: fs.rs  gcs.rs  mod.rs
tests/: fs_integration_tests.rs  no_auth_public_download_tests.rs  objects_integration_test.rs  sync_mirror_integration_tests.rs  token_integration_test.rs
tests/config/: default.rs  fs.rs  gcs.rs  mod.rs
xtask/src/: main.rs
