[package]
name = "gcs-rsync"
version = "0.2.2"
edition = "2021"
description = "rsync support for gcs with higher perf than gsutil rsync"
license = "MIT"
repository = "https://github.com/cboudereau/gcs-rsync"
documentation = "https://docs.rs/gcs-rsync"
keywords = ["gcs", "rsync", "google", "cloud", "storage"]
categories = ["command-line-utilities", "asynchronous", "web-programming", "api-bindings"]


[dependencies]
serde_json       = "1.0"
serde            = { version = "1.0",  features = ["derive"]}
tokio            = { version = "1.29", features = ["fs"] }
chrono           = { version = "0.4",  features = ["serde"] }
reqwest          = { version = "0.11", default-features = false, features = ["rustls-tls", "json", "stream"] }
futures          = { version = "0.3",  default_features = false, features = ["alloc"] }
jsonwebtoken     = "8"
async-trait      = "0.1"
percent-encoding = { version = "2",    default-features = false }
bytes            = { version = "1.4",  default-features = false }
base64           = { version = "0.21", default-features = false }
tokio-util       = "0.7"
crc32c           = "0.6"
filetime         = "0.2"
urlencoding      = "2.1"

[dev-dependencies]
tokio        = { version = "1.12", default-features = false, features = ["full"] }
uuid         = { version = "1.4",  default-features = false, features = ["v4"] }
num_cpus     = "1"
structopt    = { version = "0.3", default-features = false }